# springhead

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  example.json  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: lint.yml
app/: dummy.py  main.py  module.yaml  producer.py  specifications.yml
client/kokpit-main/: package-lock.json
compose/: docker-compose.test.yml  docker-compose.yml
dockerfiles/: pyflink.dockerfile  springhead.dockerfile  statefun.dockerfile
driver/: producer.py
env/: .env.example  .env.local.example
requirements/: requirements.dev.txt  requirements.txt
scripts/: local-run.sh  start-reload.sh  start.sh
springhead/: backup.py  config.py  docker-compose.yml  main.py  module.yaml
springhead/adapters/: context.py  message.py  process.py
springhead/controllers/: __init__.py  dependencies.py  greet.py  person.py  statefun.py  text.py
springhead/core/: __init__.py  bootstrap.py  config.py  spec.py  statefun.py
springhead/dockerfiles/: redpanda.dockerfile  springhead.dockerfile
springhead/models/: __init__.py  clustering_process.py  custom_process.py  filtering_process.py  model.py  model_loader.py  normalization_process.py  pipeline.py  process.py  record.py  spec.py  specification.py  tokenization_process.py  transformation_process.py  vectorization_process.py
springhead/schemas/: __init__.py  greet.py  requests.py  text.py
springhead/service_layer/: __init__.py  model_loader.py  pipeline_builder.py  process_builder.py  (+2 more)
(+18 files in other folders)
