[tool.poetry]
name = "springhead"
version = "0.0.1"
description = "Clustering Framework for Risingwave Singularity Data"
authors = ["Muhammad Daffa Dinaya <13518141@std.stei.itb.ac.id>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.19.0"
aiokafka = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
