[tool.poetry]
name = "springhead"
version = "0.0.1"
description = "Clustering Framework for Faust Streaming"
authors = ["Muhammad Daffa Dinaya <13518141@std.stei.itb.ac.id>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.19.0"
scikit-learn = "^1.1.2"
fastapi = "^0.81.0"
apache-flink-statefun = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
