[tool.poetry]
name = "springhead"
version = "0.0.2"
description = "Clustering Framework over Apache Flink Stateful Function"
authors = ["Muhammad Daffa Dinaya <13518141@std.stei.itb.ac.id>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.2"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
river = "^0.13.0"
apache-flink-statefun = "^3.2.0"
nltk = "^3.7"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
